third_party/rust/chromium_crates_io/vendor/cxx-v1/tests/ui/derive_bit_struct.rs
#[cxx::bridge]
mod ffi {
    #[derive(BitAnd, BitOr, BitXor)]
    struct Struct {
        x: i32,
    }
}

fn main() {}
